# snippet-finder

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-linux.txt  requirements.txt
.github/workflows/: release.yml
src/snippet-finder/: __main__.py  backend.py  frontend.py
src/snippet_finder/: __main__.py  backend.py  frontend.py
